--- a/test/files_generated/scaffold_app/public/index.html
+++ b/test/files_generated/scaffold_app/public/index.html
@@ -8,11 +8,11 @@
 
 	<link rel="stylesheet" href="assets/stylesheets/application.css">
 
-	<script src="lib/angular.min.js"></script>
-	<script src="lib/angular-ui-router.min.js"></script>
-	<script src="lib/angular-resource.min.js"></script>
-	<script src="lib/form-for.min.js"></script>
-	<script src="lib/form-for.default-templates.js"></script>
+	<script src="libs/angular.min.js"></script>
+	<script src="libs/angular-ui-router.min.js"></script>
+	<script src="libs/angular-resource.min.js"></script>
+	<script src="libs/form-for.min.js"></script>
+	<script src="libs/form-for.default-templates.js"></script>
 
 	<script src="directives/body.js"></script>
 	<script src="directives/head.js"></script>
