--- a/test/files_generated/generate_service/public/index.html
+++ b/test/files_generated/generate_service/public/index.html
@@ -6,9 +6,9 @@
 
 	<link rel="stylesheet" href="assets/stylesheets/application.css">
 
-	<script src="libs/angular.min.js"></script>
-	<script src="libs/angular-ui-router.min.js"></script>
-	<script src="libs/angular-resource.min.js"></script>
+	<script src="../node_modules/angular/angular.min.js"></script>
+	<script src="../node_modules/angular-ui-router/release/angular-ui-router.min.js"></script>
+	<script src="../node_modules/angular-resource/angular-resource.min.js"></script>
 
 	<script src="directives/body.js"></script>
 	<script src="directives/head.js"></script>
