--- a/test/files_generated/scaffold_app/public/index.html
+++ b/test/files_generated/scaffold_app/public/index.html
@@ -4,15 +4,15 @@
 	<meta charset="utf-8">
 	<title>ScaffoldApp</title>
 	<link rel="stylesheet" href="assets/stylesheets/scaffolds.css">
-	<link rel="stylesheet" href="assets/stylesheets/form-for.css">
+	<link rel="stylesheet" href="../node_modules/angular-form-for/dist/form-for.css">
 
 	<link rel="stylesheet" href="assets/stylesheets/application.css">
 
-	<script src="libs/angular.min.js"></script>
-	<script src="libs/angular-ui-router.min.js"></script>
-	<script src="libs/angular-resource.min.js"></script>
-	<script src="libs/form-for.min.js"></script>
-	<script src="libs/form-for.default-templates.js"></script>
+	<script src="../node_modules/angular/angular.min.js"></script>
+	<script src="../node_modules/angular-ui-router/release/angular-ui-router.min.js"></script>
+	<script src="../node_modules/angular-resource/angular-resource.min.js"></script>
+	<script src="../node_modules/angular-form-for/dist/form-for.min.js"></script>
+	<script src="../node_modules/angular-form-for/dist/form-for.default-templates.js"></script>
 
 	<script src="directives/body.js"></script>
 	<script src="directives/head.js"></script>
